--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,16 @@ install:
 # command to run tests
 script:
   - pytest
+
+deploy:
+  provider: s3
+  access_key_id: $AWS_ACCESS_KEY_ID
+  secret_access_key: $AWS_SECRET_ACCESS_KEY
+  bucket: 's3copier'
+  skip_cleanup: true
+  acl: public_read
+  local-dir: folder2
+
+branches:
+  only:
+    - development
